<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trip Around</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_text">What are you going to do?</string>
    <string name="action_settings">Settings</string>
    <string name="enter_city">Where do you want to go?</string>
    <string name="class1">Touristic</string>
    <string name="class2">Adventure</string>
    <string name="class3">Unexplored</string>
    <string name="class4">Panaromic</string>
    <string name="class5">Wellness</string>
    <string name="class6">Relax</string>
    <string name="plus_minus">+/-</string>
    <string name="enter_days">Duration:</string>
    <string name="search">Search</string>
    <string name="make_trip_button_label">Make A Trip</string>
    <string name="save_trip_button_label">Save A Trip</string>

    <string-array name="plus_minus_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="title_activity_make_trip">Make Trip Activity</string>
    <string name="title_activity_trip_results">Trip Results</string>
    <string name="title_activity_map_view">Map View</string>

</resources>
