<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <!--
        EditText android:id = "@+id/city_name"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:layout_marginTop="20dp"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:text="@string/enter_city"
              android:textColor="@color/Black"
              android:editable="true"
            /
    -->

    <AutoCompleteTextView
        android:id="@+id/city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:editable="true"
        android:text="@string/enter_city"
        android:textColor="@color/Black" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/class1"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_orange_light"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/class1"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/class2"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_orange_light"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/class2"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="27dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/class3"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_orange_light"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/class3"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="27dp" />

        <TextView
            android:id="@+id/class4"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_orange_light"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/class4"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="27dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/class5"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_orange_light"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/class5"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="27dp" />

        <TextView
            android:id="@+id/class6"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_orange_light"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/class6"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="27dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:gravity="left"
            android:onClick="onClick"
            android:text="@string/enter_days"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/days_to_visit_edittext"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:editable="true"
            android:ems="10"
            android:inputType="number"
            android:text="3"
            android:textColor="@color/Black" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/search"
            android:textAlignment="center"
            android:textSize="30dp" />

    </RelativeLayout>

</LinearLayout>